[package]
name = "breeze-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "image"] }
env_logger = "0.11.8"
image = "0.25.6"
native-tls = "0.2.14"
poll-promise = "0.3.0"
url = "2.5.4"
webpki = "0.22.4"
webpki-roots = "0.26.8"
