[package]
name = "breeze-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
codepage-437 = "0.1.0"
dirs = "6.0.0"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "image"] }
env_logger = "0.11.8"
image = "0.25.6"
native-tls = "0.2.14"
poll-promise = "0.3.0"
rcgen = "0.13.2"
rsa = { version = "0.9.8", features = ["getrandom"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
time = "0.3.41"
url = "2.5.4"
